# mathc

./: .clang-format  .gitignore  CMakeLists.txt  mathc.c  mathc.h  pixi.toml
source/: mathc.c  mathc.h
tests/: test_easing.c  test_mat2.c  test_mat3.c  test_mat4.c  test_quat.c  test_utils.c  test_vec2.c  test_vec2i.c  test_vec3.c  test_vec3i.c  test_vec4.c  test_vec4i.c
tools/: format.py
